# dstools

./: .gitignore  .pre-commit-config.yaml  README.md  atca_cal.sh  avg_baselines.py  dynamic_spectrum.py  fix_phasecentre.py  functions.sh  image.py  make_dspec.py  makedspec.py  plot_dspec.py  plotdspec.py  pyproject.toml  remove_field_source.sh  utils.py
dstools/: atca_cal.sh  atca_quickcal.sh  dynamic_spectrum.py  fix_dir.py  functions.sh  logger.py  rescale_askapsoft.py  rm.py  utils.py
dstools/cli/: askap_preprocess.py  avg_baselines.py  avg_baselines_casa.py  cal.py  combine_spws.py  combine_spws_casa.py  extract_ds.py  fix_phasecentre.py  fix_phasecentre_casa.py  make_dspec.py  model_field.py  model_field_casa.py  plot_ds.py  plot_dspec.py  quickds.py  remove_source.py  remove_source_casa.py  setup.py  subtract_model.py  subtract_model_casa.py  summary_plot.py
