[tool.poetry]
name = "dstools"
version = "1.0.0"
description = "A processing pipeline to produce dynamic spectra from ATCA and ASKAP visibilities."
authors = ["Joshua Pritchard <joshua.pritchard@sydney.edu.au>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.3"
matplotlib = "^3.8.2"
numpy = "^1.22.2"
colorlog = "^6.8.2"
dask = {extras = ["complete"], version = "^2023.2.1"}
scipy = "^1.9.3"
astropy = "^6.0.0"
pandas = "2.1.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dstools-cal = "dstools.cli.cal:main"
dstools-model-field = "dstools.cli.model_field:main"
dstools-rotate = "dstools.cli.fix_phasecentre:main"
dstools-avg-baselines = "dstools.cli.avg_baselines:main"
dstools-make-dspec = "dstools.cli.make_dspec:main"
dstools-plot-dspec = "dstools.cli.plot_dspec:main"
dstools-remove-offaxis = "dstools.cli.remove_offaxis:main"
dstools-diagnostics = "dstools.cli.plot_diagnostics:main"
dstools-quickds = "dstools.cli.quickds:main"
dstools-askap-preprocess = "dstools.cli.askap_preprocess:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
isort = "^5.13.2"
black = "^24.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.1"
coverage = "^7.4.1"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
