[tool.poetry]
name = "radio-dstools"
version = "1.0.0"
description = "A processing pipeline to produce dynamic spectra from visibilities."
authors = ["Joshua Pritchard <joshua.pritchard@csiro.au>"]
packages = [
    {include = "dstools"},
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
matplotlib = "^3.8.2"
numpy = "^1.22.2"
scipy = "^1.9.3"
astropy = "^6.0.0"
pandas = "2.1.4"
python-casacore = "3.5.1"
h5py = "^3.11.0"
colorlog = "^6.8.2"

[tool.poetry.scripts]
dstools-setup = "dstools.cli.setup:main"
dstools-askap-preprocess = "dstools.cli.askap_preprocess:main"
dstools-cal = "dstools.cli.cal:main"
dstools-remove-source = "dstools.cli.remove_source:main"
dstools-model-field = "dstools.cli.model_field:main"
dstools-subtract-model = "dstools.cli.subtract_model:main"
dstools-extract-ds = "dstools.cli.extract_ds:main"
dstools-plot-ds = "dstools.cli.plot_ds:main"
_dstools-combine-spws = "dstools.cli.combine_spws:main"
_dstools-avg-baselines = "dstools.cli.avg_baselines:main"
_dstools-rotate = "dstools.cli.fix_phasecentre:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.1"
coverage = "^7.4.1"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.isort]
line_length = 88
profile = "black"
include_trailing_comma = true

[tool.pyright]
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false

[tool.mypy]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astropy.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
